<resources>
    <string name="app_name">MultiCapture Hub</string>
    <string name="record_button">Record</string>
    <string name="start_capture">Start</string>
    <string name="stop_capture">Stop</string>
    <string name="back_to_menu">Back</string>
    <string name="audioimage">AudioImage</string>
    <string name="audio_record_button">audio record button</string>
    <string name="video_record_button">video record button</string>
    <string name="videoIcon">videoIcon</string>
    <string name="play">Play</string>
    <string name="record_audio">Audio Record</string>
    <string name="recording_status">Recording status</string>
</resources>