<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.">
    <LinearLayout
        android:id="@+id/VerticalLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/SuperiorLayout"
            android:layout_width="match_parent"
            android:layout_height="111dp">

            <TextView
                android:id="@+id/audio_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_audio"
                android:textAlignment="center"
                android:textColor="#979595"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/InferiorLayout"
            android:layout_width="match_parent"
            android:layout_height="618dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back_audio_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/button"
                android:elevation="2dp"
                android:text="@string/back_to_menu"
                android:textColor="#E8DFDF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/audio_capture_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.882" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/audio_capture_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/button"
                android:elevation="2dp"
                android:text="@string/start_capture"
                android:textColor="#E8E2E2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/back_audio_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.88" />

            <ImageView
                android:id="@+id/image_status"
                android:contentDescription="@string/recording_status"
                android:layout_width="311dp"
                android:layout_height="340dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="67dp"
                app:layout_constraintBottom_toTopOf="@+id/back_audio_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/audio_record_off" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="205dp" />
</androidx.constraintlayout.widget.ConstraintLayout>